--- a/ProjectSuatuHari/Home/Main.storyboard
+++ b/ProjectSuatuHari/Home/Main.storyboard
@@ -203,6 +203,7 @@
                         <outlet property="nextBtn" destination="omr-qo-HUu" id="ITI-bI-4Mt"/>
                         <outlet property="previousBtn" destination="vxd-gC-I0F" id="pVN-RZ-1vq"/>
                         <outlet property="profiling" destination="tsE-TE-q0h" id="ac6-pF-t5o"/>
+                        <outlet property="starTotalLabel" destination="xnk-R4-fRK" id="w4X-Es-1cB"/>
                         <outlet property="starView" destination="vOf-5L-E4C" id="WsL-XC-ZM2"/>
                     </connections>
                 </viewController>
